fix: change footer flex-wrap to nowrap

--- a/website/src/components/Footer/Footer.module.scss
+++ b/website/src/components/Footer/Footer.module.scss
@@ -86,7 +86,7 @@
 .footer__wrapper {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 24px 40px;
 
   @media (min-width: 1024px) {
